﻿============================== Next release ==============================

  new data
    main/LiIO3/Umegaki-o.yml
    main/LiIO3/Umegaki-e.yml
  new data (thanks to Yago Arosa Lobato, Universidade de Santiago de Compostela, Spain!)
    main/SiO2/Arosa.yml
  new data (thanks to Georgy Ermolaev, Moscow Institute of Physics and Technology, Russia, for submitting data in YAML format!)
    other/perovskite/CsPbBr3/Ermolaev-o.yml
    other/perovskite/CsPbBr3/Ermolaev-e.yml
    other/perovskite/CsPbCl3/Ermolaev-o.yml
    other/perovskite/CsPbCl3/Ermolaev-e.yml
    other/perovskite/CsPb(Br,Cl)3/Ermolaev-Br1.3Cl1.7-o.yml
    other/perovskite/CsPb(Br,Cl)3/Ermolaev-Br1.3Cl1.7-e.yml
    other/perovskite/CsPb(Br,Cl)3/Ermolaev-Br1.8Cl1.2-o.yml
    other/perovskite/CsPb(Br,Cl)3/Ermolaev-Br1.8Cl1.2-e.yml
  new data (thanks to Michele Magnozzi, Istituto Nazionale di Fisica Nucleare, Genova, Italy, for submitting data!)
    main/Ag/Ferrera-298K.yml
    main/Ag/Ferrera-404K.yml
    main/Ag/Ferrera-501K.yml
    main/Ag/Ferrera-600K.yml
    main/Au/Magnozzi-25C.yml
    main/Au/Magnozzi-225C.yml
    main/Au/Magnozzi-350C.yml
  new data (thanks to Zhengfeng Guo, Huazhong University of Science and Technology, Wuhan, China, for submitting data!)
    main/SnSe/Guo-alpha.yml
    main/SnSe/Guo-beta.yml
    main/SnSe/Guo-alpha.yml
  new data (thanks to Jan Hrabovsky, Charles University, Prague, Czech Republic, for submitting data!)
    main/C/Taylor.yml
  new data (thanks to Tobias König, Leibniz-Institut für Polymerforschung Dresden, Germany, for submitting data!)  
    other/perovskite/CsPbI3/Aftenieva.yml
    other/quantum dots/CdSe-ZnCdS/Aftenieva.yml
  new data (thanks to Frank Somhorst, University of Twente, Netherlands, for submitting data!)
    main/EuS/Meretska.yml
  new data (thanks to Callum Stirling, University of Southampton, UK, for suggesting data!)
    main/HfO2/Bright.yml