@@ -1,0 +1,10 @@
+<!--
+this file is part of refractiveindex.info database
+refractiveindex.info database is in the public domain
+copyright and related rights waived via CC0 1.0
+-->
+
+<h1>Barium gallogermanate (BGG) glass</h1>
+
+<h2>Composition</h2>
+BaO : Ga<sub>2</sub>O<sub>3</sub> : GeO<sub>2</sub>
